cmake_minimum_required(VERSION 3.21)
project(codeAcademy)

set(CMAKE_CXX_STANDARD 23)

add_executable(codeAcademy main.cpp dataTypesLesson.cpp dataTypesLesson.h operatorsLesson.cpp operatorsLesson.h referencePointers.cpp referencePointers.h piggyBank.h piggyBank.cpp loops.cpp loops.h rockPaperScissors.h rockPaperScissors.cpp)
